Look at that, I fixed it, it was so simple, instead of 2 buttons changing visibility, use 2 divs within the button changing visibility.

--- a/css/styles.css
+++ b/css/styles.css
@@ -172,9 +172,7 @@ html {
 .button_div {
   flex-grow: 1;
 }
-#orderButton2 {
-  display: none;
-}
+
 /* X Button */
 
 .XButtonRed {
